--- a/app/src/main/res/layout/fragment_show_nutrient.xml
+++ b/app/src/main/res/layout/fragment_show_nutrient.xml
@@ -1,23 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tool="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:clipChildren="false"
-    android:clipToPadding="false"
-    android:padding="24dp">
+    android:padding="24dp"
+    tool:context=".ui.child.ShowChildFragment">
 
     <com.google.android.material.card.MaterialCardView
-        android:id="@+id/mcv_child_name"
+        android:id="@+id/mcv_nutrient_name"
         style="@style/Widget.MaterialComponents.CardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="@dimen/card_spacing"
-        android:layout_marginEnd="32dp"
         android:layout_marginBottom="@dimen/card_spacing"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,43 +24,40 @@
             android:padding="@dimen/card_spacing">
 
             <TextView
-                android:id="@+id/tv_txt_child_name"
+                android:id="@+id/tv_txt_nutrient_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawableStart="@drawable/ic_menu_child"
+                android:drawableStart="@drawable/ic_menu_nutrient"
                 android:drawableEnd="@drawable/ic_edit_black_24dp"
                 android:drawablePadding="10dp"
-                android:text="@string/txt_child_name"
+                android:text="@string/txt_nutrient_name"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/tv_child_name"
+                android:id="@+id/tv_nutrient_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingStart="33dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_txt_child_name"
-                tool:text="Albuki" />
+                app:layout_constraintTop_toBottomOf="@id/tv_txt_nutrient_name"
+                tool:text="Roti" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </com.google.android.material.card.MaterialCardView>
 
     <com.google.android.material.card.MaterialCardView
-        android:id="@+id/mcv_gender"
+        android:id="@+id/mcv_carbohydrate"
         style="@style/Widget.MaterialComponents.CardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
         android:layout_marginTop="@dimen/card_spacing"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="@dimen/card_spacing"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/mcv_child_name">
+        app:layout_constraintTop_toBottomOf="@id/mcv_nutrient_name">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -73,43 +65,40 @@
             android:padding="@dimen/card_spacing">
 
             <TextView
-                android:id="@+id/tv_txt_gender"
+                android:id="@+id/tv_txt_carbohydrate"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawableStart="@drawable/ic_gender_24dp"
+                android:drawableStart="@drawable/ic_carbohydrates_24dp"
                 android:drawableEnd="@drawable/ic_edit_black_24dp"
                 android:drawablePadding="10dp"
-                android:text="@string/txt_gender"
+                android:text="@string/txt_carbohydrate"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/tv_gender"
+                android:id="@+id/tv_carbohydrate"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingStart="33dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_txt_gender"
-                tool:text="perempuan" />
+                app:layout_constraintTop_toBottomOf="@id/tv_txt_carbohydrate"
+                tool:text="10 Karbohidrat" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </com.google.android.material.card.MaterialCardView>
 
     <com.google.android.material.card.MaterialCardView
-        android:id="@+id/mcv_date_of_birth"
+        android:id="@+id/mcv_calories"
         style="@style/Widget.MaterialComponents.CardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
         android:layout_marginTop="@dimen/card_spacing"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="@dimen/card_spacing"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/mcv_gender">
+        app:layout_constraintTop_toBottomOf="@id/mcv_carbohydrate">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -117,26 +106,106 @@
             android:padding="@dimen/card_spacing">
 
             <TextView
-                android:id="@+id/tv_txt_date_of_birth"
+                android:id="@+id/tv_txt_calories"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawableStart="@drawable/ic_date_range_black_24dp"
+                android:drawableStart="@drawable/ic_calories_24dp"
                 android:drawableEnd="@drawable/ic_edit_black_24dp"
                 android:drawablePadding="10dp"
-                android:text="@string/txt_date_of_birth"
+                android:text="@string/txt_calories"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/tv_date_of_birth"
+                android:id="@+id/tv_calories"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingStart="33dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_txt_date_of_birth"
-                tool:text="12 Oktober 2019" />
+                app:layout_constraintTop_toBottomOf="@id/tv_txt_calories"
+                tool:text="12 Kalori" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </com.google.android.material.card.MaterialCardView><com.google.android.material.card.MaterialCardView
+        android:id="@+id/mcv_fat"
+        style="@style/Widget.MaterialComponents.CardView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/card_spacing"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/mcv_calories">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="@dimen/card_spacing">
+
+            <TextView
+                android:id="@+id/tv_txt_fat"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableStart="@drawable/ic_fat_24dp"
+                android:drawableEnd="@drawable/ic_edit_black_24dp"
+                android:drawablePadding="10dp"
+                android:text="@string/txt_calories"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/tv_fat"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingStart="33dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tv_txt_fat"
+                tool:text="12 Lemak" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </com.google.android.material.card.MaterialCardView>
+
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/mcv_protein"
+        style="@style/Widget.MaterialComponents.CardView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/card_spacing"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/mcv_fat">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="@dimen/card_spacing">
+
+            <TextView
+                android:id="@+id/tv_txt_protein"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableStart="@drawable/ic_menu_nutrient"
+                android:drawableEnd="@drawable/ic_edit_black_24dp"
+                android:drawablePadding="10dp"
+                android:text="@string/txt_calories"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/tv_protein"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingStart="33dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tv_txt_protein"
+                tool:text="12 Protein" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -149,7 +218,7 @@
         android:layout_marginTop="@dimen/activity_vertical_margin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/mcv_date_of_birth">
+        app:layout_constraintTop_toBottomOf="@id/mcv_protein">
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_delete"
