--- a/app/src/main/res/layout/fragment_create_nutrient.xml
+++ b/app/src/main/res/layout/fragment_create_nutrient.xml
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tool="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tool:context=".ui.child.CreateChildFragment">
+    tool:context=".ui.nutrient.CreateNutrientFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clipChildren="false"
         android:clipToPadding="false"
+        android:orientation="vertical"
         android:padding="24dp">
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/til_child_name"
+            android:id="@+id/til_nutrient_name"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/txt_child_name_with_asterisk"
+            android:hint="@string/txt_nutrient_name_with_asterisk"
             app:errorEnabled="true"
             app:helperText="*Wajib"
             app:helperTextEnabled="true"
@@ -28,74 +28,112 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/tiet_child_name"
+                android:id="@+id/tiet_nutrient_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:drawableStart="@drawable/ic_menu_child"
+                android:drawableStart="@drawable/ic_menu_nutrient"
                 android:drawablePadding="10dp"
                 android:inputType="text" />
+
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/til_date_of_birth"
+            android:id="@+id/til_carbohydrate"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/txt_date_of_birth_with_asterisk"
+            android:hint="@string/txt_carbohydrate_with_asterisk"
             app:errorEnabled="true"
             app:helperText="*Wajib"
             app:helperTextEnabled="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/til_child_name">
+            app:layout_constraintTop_toBottomOf="@id/til_nutrient_name">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/tiet_date_of_birth"
+                android:id="@+id/tiet_carbohydrate"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:clickable="true"
-                android:drawableStart="@drawable/ic_date_range_black_24dp"
+                android:drawableStart="@drawable/ic_carbohydrates_24dp"
                 android:drawablePadding="10dp"
-                android:editable="false"
-                android:focusable="false"
-                android:inputType="datetime" />
+                android:inputType="text" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/til_gender"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
+            android:id="@+id/til_calories"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/txt_child_gender_with_asterisk"
+            android:hint="@string/txt_calories_with_asterisk"
             app:errorEnabled="true"
             app:helperText="*Wajib"
             app:helperTextEnabled="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/til_date_of_birth">
+            app:layout_constraintTop_toBottomOf="@id/til_carbohydrate">
 
-            <AutoCompleteTextView
-                android:id="@+id/dropdown_gender"
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/tiet_calories"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawableStart="@drawable/ic_gender_24dp"
                 android:layout_gravity="center"
+                android:drawableStart="@drawable/ic_calories_24dp"
                 android:drawablePadding="10dp"
-                android:editable="false" />
-
-            <!--            <com.google.android.material.textfield.TextInputEditText-->
-            <!--                android:id="@+id/tiet_gender"-->
-            <!--                android:layout_width="match_parent"-->
-            <!--                android:layout_height="wrap_content"-->
-            <!--                android:layout_gravity="center"-->
-            <!--                android:drawableStart="@drawable/ic_gender_24dp"-->
-            <!--                android:drawablePadding="10dp"-->
-            <!--                android:inputType="text" />-->
+                android:inputType="text" />
 
         </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/til_fat"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/txt_fat_with_asterisk"
+            app:errorEnabled="true"
+            app:helperText="*Wajib"
+            app:helperTextEnabled="true"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/til_calories">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/tiet_fat"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:drawableStart="@drawable/ic_fat_24dp"
+                android:drawablePadding="10dp"
+                android:inputType="text" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/til_protein"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/txt_protein_with_asterisk"
+            app:errorEnabled="true"
+            app:helperText="*Wajib"
+            app:helperTextEnabled="true"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/til_fat">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/tiet_protein"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:drawableStart="@drawable/ic_menu_nutrient"
+                android:drawablePadding="10dp"
+                android:inputType="text" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
 
         <RelativeLayout
             android:id="@+id/rl_action"
@@ -103,7 +141,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/til_gender">
+            app:layout_constraintTop_toBottomOf="@id/til_protein">
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btn_next"
