--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/nav_home"
-        android:name="com.cita.myapplication.ui.home.HomeFragment"
+        android:name="com.cita.myapplicationadmin.ui.home.HomeFragment"
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_home">
         <action
@@ -17,7 +17,7 @@
 
     <fragment
         android:id="@+id/nav_gallery"
-        android:name="com.cita.myapplication.ui.gallery.GalleryFragment"
+        android:name="com.cita.myapplicationadmin.ui.gallery.GalleryFragment"
         android:label="@string/menu_gallery"
         tools:layout="@layout/fragment_gallery">
         <argument
@@ -28,38 +28,38 @@
 
     <fragment
         android:id="@+id/nav_slideshow"
-        android:name="com.cita.myapplication.ui.slideshow.SlideshowFragment"
+        android:name="com.cita.myapplicationadmin.ui.slideshow.SlideshowFragment"
         android:label="@string/menu_slideshow"
         tools:layout="@layout/fragment_slideshow" />
 
     <fragment
         android:id="@+id/nav_tools"
-        android:name="com.cita.myapplication.ui.tools.ToolsFragment"
+        android:name="com.cita.myapplicationadmin.ui.tools.ToolsFragment"
         android:label="@string/menu_tools"
         tools:layout="@layout/fragment_tools" />
 
     <fragment
         android:id="@+id/nav_share"
-        android:name="com.cita.myapplication.ui.share.ShareFragment"
+        android:name="com.cita.myapplicationadmin.ui.share.ShareFragment"
         android:label="@string/menu_share"
         tools:layout="@layout/fragment_share" />
 
     <fragment
         android:id="@+id/nav_send"
-        android:name="com.cita.myapplication.ui.send.SendFragment"
+        android:name="com.cita.myapplicationadmin.ui.send.SendFragment"
         android:label="@string/menu_send"
         tools:layout="@layout/fragment_send" />
 
     <fragment
         android:id="@+id/nav_profile"
-        android:name="com.cita.myapplication.ui.profile.ProfileFragment"
+        android:name="com.cita.myapplicationadmin.ui.profile.ProfileFragment"
         android:label="@string/menu_profile"
         tools:layout="@layout/fragment_profile" />
 
 
     <fragment
         android:id="@+id/nav_nutrient"
-        android:name="com.cita.myapplication.ui.nutrient.NutrientFragment"
+        android:name="com.cita.myapplicationadmin.ui.nutrient.NutrientFragment"
         android:label="@string/menu_nutrient"
         tools:layout="@layout/fragment_nutrient">
         <action
@@ -72,7 +72,7 @@
 
     <fragment
         android:id="@+id/nav_create_nutrient"
-        android:name="com.cita.myapplication.ui.nutrient.CreateNutrientFragment"
+        android:name="com.cita.myapplicationadmin.ui.nutrient.CreateNutrientFragment"
         android:label="@string/menu_create_nutrient"
         tools:layout="@layout/fragment_create_nutrient">
 
@@ -83,13 +83,42 @@
     </fragment>
     <fragment
         android:id="@+id/nav_show_nutrient"
-        android:name="com.cita.myapplication.ui.nutrient.ShowNutrientFragment"
+        android:name="com.cita.myapplicationadmin.ui.nutrient.ShowNutrientFragment"
         android:label="@string/menu_show_nutrient"
-        tools:layout="@layout/fragment_show_nutrient" >
+        tools:layout="@layout/fragment_show_nutrient">
         <argument
             android:name="nutrientId"
-            app:argType="integer"
-            android:defaultValue="0" />
+            android:defaultValue="0"
+            app:argType="integer" />
     </fragment>
+    <fragment
+        android:id="@+id/nav_child"
+        android:name="com.cita.myapplicationadmin.ui.child.ChildFragment"
+        android:label="@string/menu_child"
+        tools:layout="@layout/fragment_child">
+
+    </fragment>
+    <fragment
+        android:id="@+id/nav_diagnoses"
+        android:name="com.cita.myapplicationadmin.ui.diagnoses.DiagnosesFragment"
+        android:label="@string/menu_diagnoses"
+        tools:layout="@layout/fragment_diagnoses">
+
+        <action
+            android:id="@+id/action_nav_diagnoses_to_nav_show_diagnoses"
+            app:destination="@id/nav_show_diagnoses" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/nav_show_diagnoses"
+        android:name="com.cita.myapplicationadmin.ui.diagnoses.ShowDiagnosesFragment"
+        android:label="@string/menu_show_diagnoses"
+        tools:layout="@layout/fragment_show_diagnoses">
+        <argument
+            android:name="diagnosesId"
+            android:defaultValue="0"
+            app:argType="integer" />
+    </fragment>
+
 
 </navigation>
