--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -13,8 +13,16 @@
             android:icon="@drawable/ic_menu_profile"
             android:title="@string/menu_profile" />
         <item
+            android:id="@+id/nav_child"
+            android:icon="@drawable/ic_menu_child"
+            android:title="@string/menu_child" />
+        <item
             android:id="@+id/nav_nutrient"
             android:icon="@drawable/ic_menu_nutrient"
+            android:title="@string/menu_nutrient" />
+        <item
+            android:id="@+id/nav_diagnoses"
+            android:icon="@drawable/ic_diagnoses_black_24dp"
             android:title="@string/menu_nutrient" />
     </group>
 
